src/App.css
body {
  background-color: #f5f1ea;
  font-size: 18px;
}

button {
  cursor: pointer;
  border: 2px solid #822000;
  padding: 10px;
  font-weight: bold; 
  background-color: transparent;
  border-radius: 15px;
  box-shadow: 0 0 5px #979AA4;
}

a {
  text-decoration-color: #822000;
  color: black;
}

a:hover {
  color: #822000;
}

.main-footer-wrapper {
  display: flex;
  align-items: center;
  flex-flow: column;
}

.aria-announcements {
  position: fixed;
  left: -9999px;
}

.main {
  display: flex;
  align-items: center;
  flex-flow: column;
  padding-top: 44px;
  width: 100%;
}

.main-title {
  margin-top: 40px;
  color: #822000;
  text-align: center;
}

.form--input {
  border: 2px solid #822000;
  padding: 10px;
  border-radius: 15px;
  box-shadow: 0 0 5px #979AA4;
  width: 100%;
}

.form--label {
  margin-bottom: 5px;
  margin-left: 10px;
  font-size: 16px;
}

/* Battle toolbar */
.battle-toolbar {
  display: flex;
  justify-content: space-around;
  border-top: 2px solid #822000;
  border-bottom: 2px solid #822000;
  height: 40px;
  width: 100%;
  padding-top: 5px;
  padding-bottom: 5px;
  background-color: #ebe2d3;
  position: fixed;
  top: 0;
}

/*
 * Remove sticky bar bahviour for landscape screens bigger than 600px.
 * On screen keyboards and the sticky bar leave a very small viewport.
 */
@media only screen and (max-width: 600px) and (orientation: landscape) {
  .main {
    padding-top: 0px;
  }

  .battle-toolbar {
    position: relative;
  }
}

.battle-toolbar--stat {
  height: 50%;
  margin-top: 2px;
  display: flex;
  align-items: center;
  flex-flow: column;
  font-weight: bold;
  color: #822000;
}

/* Remove most unimportant battle bar info for screens smaller than 768px */
@media only screen and (max-width: 768px) {
  .battle-toolbar--stat__extra2 {
    display: none;
  }
}

/* Remove second-most unimportant battle bar info for screens smaller than 600px */
@media only screen and (max-width: 600px) and (orientation: portrait) {
  .battle-toolbar--stat__extra1 {
    display: none;
  }
}

.battle-toolbar--stat-value {
  font-weight: normal;
  color: black;
  text-transform: capitalize;
}

.battle-toolbar--button {
  padding: 4px;
  background-color: #EBE1AD;
}

.battle-toolbar--button__reset {
  padding-bottom: 2px;
  padding-top: 0;
}

.battle-toolbar--button__disabled {
  background-color: transparent;
  cursor: auto;
  border: 2px dashed #822000;
}

/* Creature toolbar */

.creature-toolbar {
  grid-gap: 22px;
  grid-row-gap: 10px;
  display: grid;
  grid-template-columns: repeat(auto-fit, 15px);
  grid-auto-rows: 1fr;
  width: 100%;
}

.creature-toolbar--form {
  width: 100%;
  height: 100%;
  grid-column: span 8;
  display: flex;
  flex-direction: column;
}

.creature-toolbar--form__number {
  grid-column: span 4;
}

.creature-toolbar--input {
  background-color: white;
  box-sizing: border-box;
  display: block;
}

.creature-toolbar--dropdown {
  -webkit-appearance: none;
  cursor: pointer;
}

.creature-toolbar--button {
  padding: 4px;
  display: flex;
  background-color: #EBE1AD;
  margin-top: 22px;
  grid-column: span 2;
  padding-left: 10px;
}

.creature-toolbar--button__dead {
  background-color: lightgrey;
}

.creature-toolbar--input__disabled {
  background-color: transparent;
  border: 2px dashed #822000;
}

.creature-toolbar--dropdown {
  cursor: pointer;
  grid-column: span 4;
  display: flex;
  flex-direction: column;
}

.creature-toolbar--dropdown option {
  text-transform: capitalize;
}

@media only screen and (max-width: 768px) {
  .creature-toolbar {
    justify-content: center;
  }
}

/*
 * Ensure the first and last rows of the creature toolbar are centered
 * on the smallest portrait screens.
 */
@media only screen and (max-width: 436px) and (orientation: portrait) {
  .creature-toolbar--button {
    grid-column: 2 / span 2;
  }

  .creature-toolbar--last {
    grid-column: 3 / span 4;
  }
}

/* Create creature form */

.create-creature-form {
  width: 80%;
  margin-top: 20px;
  grid-gap: 50px;
  display: grid;
  grid-template-columns: 20% 10% 10% 10%;
  justify-content: center;
}

.create-creature-form--item {
  display: flex;
  flex-direction: column;
}

.create-creature-form--input__small-number {
  padding-left: 5px;
  font-weight: bold;
}

.create-creature-form--multiplier-container {
  display: flex;
  align-items: baseline;
}

.create-creature-form--multiplier {
  margin-right: 5px;
  font-weight: bold;
}

.create-creature-form--item__multiplier .create-creature-form--label {
  margin-left: 0px;
}

.create-creature-form--input__error {
  border: 2px solid red;
}

@media only screen and (max-width: 1175px) {
  .create-creature-form {
    grid-template-columns: 30% 15% 15% 15%;
  }
}

/*
 * Ensure create creature form is centered on multiple rows on small screens
 */
@media only screen and (max-width: 825px) {
  .create-creature-form {
    grid-template-columns: repeat(6, 25px);
    grid-row-gap: 10px;
  }

  .create-creature-form--item {
    align-items: center;
  }

  .create-creature-form--item__text {
    grid-column: 2 / span 4;
  }

  .create-creature-form--item__number {
    grid-column: 2 / span 4;
  }

  .create-creature-form--item__multiplier {
    grid-column: 3 / span 2;
  }

  .create-creature-form--label {
    margin-left: 0px;
  }
}

/* Creatures */

.creature-list {
  width: 80%;
  margin-bottom: 40px;
}

.creature-wrapper {
  border-top: 10px double #822000;
  border-bottom: 10px double #822000;
  border-left: 1px solid #822000;
  border-right: 1px solid #822000;
  box-shadow: 0 0 5px #979AA4;
  border-radius: 15px;
  margin: 60px 0 10px 0;
  padding: 10px;
  background-color: #EBE1AD;
  display: flex;
  flex-flow: row;
  align-items: flex-start;
  justify-content: space-between;
}

.creature-wrapper__active {
  border: 4px solid #822000;
}

/* Ensure the creature boxes take up 100% of the screen width for smaller screens. */
@media only screen and (max-width: 768px) {
  .creature-list {
    width: 100%;
  }

  .creature-wrapper {
    border-left: none;
    border-right: none;
    border-radius: 0;
  }

  .creature-wrapper__active {
    border-left: none;
    border-right: none;
  }
}

.creature-wrapper__dead {
  background-color: lightgrey;
}

.expanded-creature {
  width: 100%;
}

.expanded-creature--name {
  font-weight: bold;
  font-size: 28px;
  text-transform: capitalize;
  color: #822000;
  margin-top: 4px;
  display: flex;
  align-items: center;
}

.expanded-creature--status {
  text-decoration: underline;
  text-decoration-color: #822000;
  text-decoration-style: double;
  color: black;
  margin-top: 4px;
}

.expanded-creature--active-icon {
  margin-left: 10px;
}

.expanded-creature--stat {
  margin-bottom: 10px;
  color: #822000;
}

.expanded-creature--remove-button {
  max-width: 20%;
  padding: 4px;
  height: 43px;
}

.expanded-creature--confirm-remove-button {
  max-width: 20%;
  padding: 4px;
  height: 43px;
  min-width: 10%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.expanded-creature--separator {
  background-image: linear-gradient(to left, rgba(255,0,0,0), #822000);
  height: 4px;
  margin-bottom: 20px;
  margin-top: 20px;
}

/* Allow more room for buttons in creature box on smaller screen sizes. */
@media only screen and (max-width: 600px) {
  .expanded-creature--confirm-remove-button {
    max-width: 40%;
  }
}

.collapsed-creature {
  width: 100%;
}

/* Reduce width of inner collapsed creature box on all but the largest screens */
@media only screen and (max-width: 1024px) {
  .collapsed-creature {
    width: 85%;
  }
}

.collapsed-creature--status {
  display: flex;
  margin: 4px 0 4px 0;
  color: black;
  font-style: italic;
}

.collapsed-creature--status__margin {
  margin-left: 5px;
}

.collapsed-creature--name {
  font-weight: bold;
  font-size: 28px;
  color: #822000;
  text-align: left;
  text-transform: capitalize;
  margin-top: 4px;
  margin-bottom: 0px;
}

.collapsed-creature--name__dead {
  text-decoration: line-through wavy;
  text-decoration-color: black;
}

.collapsed-creature--notes {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  padding-right: 2px;
  max-width: 45%;
}

/* Creature note list */

.creature-note-list {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  grid-auto-rows: minmax(60px, auto);
  grid-gap: 15px;
  margin-top: 5px;
  border: 1px solid #822000;
  border-radius: 15px;
  box-shadow: 0 0 5px #979AA4;
  padding: 10px;
  overflow: scroll;
}

/* Reduce width of note list to two columns on smaller screen sizes */
@media only screen and (max-width: 768px) {
  .creature-note-list {
    grid-template-columns: repeat(2, 1fr);
  }
}

.creature-note-list--item {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.creature-note-list--label {
  font-size: 22px;
  color: #822000;
  border-bottom: 1px solid black;
  width: 50%;
  margin-bottom: 20px;
}

.creature-note-list--note {
  text-decoration: underline;
  text-decoration-color: #822000;
  text-decoration-style: double;
  color: black;
}

.creature-note-list--note::first-letter {
  text-transform: uppercase;
}

.creature-note-list--button {
  margin-left: 5px;
  padding: 4px;
  display: flex;
}

.creature-note-list--timer {
  margin-top: 5px;
  font-size: 14px;
  color: black;
}

.expand-creature-button {
  padding: 4px;
  display: flex;
}

/* Health points */

.health-points--fine {
  color: #004D00;
  font-weight: bold;
}

.health-points--damaged {
  color: black;
  font-weight: bold;
}

.health-points--critical {
  color: #822000;
  font-weight: bold;
}

/* Footer */

.footer-text {
  padding: 10px;
}

/* Hide keyboard shortcuts from devices unlikely to have a physical keyboard */ 
@media only screen and (max-width: 1024px) {
  .footer-text--shortcuts {
    display: none;
  }
}

